--- a/templates/sectors/sectors-view-visualisation.html
+++ b/templates/sectors/sectors-view-visualisation.html
@@ -8,6 +8,19 @@
         search-value="vm.searchValue"
         submit-search="vm.submitSearch"></top-navbar> -->
 
+    <div class="row switch-view">
+        <div class="col-xs-6 text-center">
+            <div class="panel xlightblue no-margin-bottom" ui-sref="sectors">
+                Map & list view
+            </div>
+        </div>
+        <div class="col-xs-6 text-center">
+            <div class="panel lightblue no-margin-bottom">
+                Visualisation
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="sector-vis-sunburst">
