--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -10,14 +10,14 @@
     -->
 
     <div class="row switch-view">
-    	<div class="col-xs-6 text-center">
-    		<div class="panel lightblue no-margin-bottom">
-    			Map & list view
+    	<div class="col-xs-6">
+    		<div class="panel current lightblue no-margin-bottom">
+    			<i class="icon globe"></i> Map & list view
     		</div>
     	</div>
-    	<div class="col-xs-6 text-center">
+    	<div class="col-xs-6">
     		<div class="panel xlightblue no-margin-bottom" ui-sref="sectors-vis">
-    			Visualisation
+    			<i class="icon presentation"></i> Visualisation
     		</div>
     	</div>
     </div>
