--- a/templates/sectors/sectors-view-visualisation.html
+++ b/templates/sectors/sectors-view-visualisation.html
@@ -9,14 +9,14 @@
         submit-search="vm.submitSearch"></top-navbar> -->
 
     <div class="row switch-view">
-        <div class="col-xs-6 text-center">
+        <div class="col-xs-6">
             <div class="panel xlightblue no-margin-bottom" ui-sref="sectors">
-                Map & list view
+                <i class="icon globe"></i> Map & list view
             </div>
         </div>
-        <div class="col-xs-6 text-center">
-            <div class="panel lightblue no-margin-bottom">
-                Visualisation
+        <div class="col-xs-6">
+            <div class="panel current lightblue no-margin-bottom">
+                <i class="icon presentation"></i> Visualisation
             </div>
         </div>
     </div>
