--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -20,6 +20,8 @@
     			<i class="icon presentation"></i> Visualisation
     		</div>
     	</div>
+    	<div class="col-xs-12 border">
+    	</div>
     </div>
 
     <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
