--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -410,6 +410,9 @@
                             </tr>
                         </tbody>
                     </table>
+
+
+                    <nvd3 options="vm.transactionChartOptions" data="vm.transactionChartData" class="with-3d-shadow with-transitions"></nvd3>
                 </div>
 
                 <div class="panel lightblue with-table">
