--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -64,8 +64,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            Insight into XX development aid projects committed by the Netherlands Enterprise Agency, in XX countries, with a total budget of XX. <br>
-            Projects unders construction as of commissioned since January 2015.
+            Insight into XX development aid projcts committed by the Netherlands Enterprise Agency, in XX countries, with a total budget of XX. Projects either active on or started after January 2015.
           </div>
         </div>
       </div>
