--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -27,7 +27,7 @@
         <li 
           ng-class="{'active': vm.stateName == 'sectors'}"><a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors">Sectors</a></li>
         <li 
-          ng-class="{'active': vm.stateName == 'organisations'}"><a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations">Organisations</a></li>
+          ng-class="{'active': vm.stateName == 'organisations'}"><a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations">Project partners</a></li>
 
         <li 
           ng-class="{'active': vm.stateName == 'search'}"><a ng-class="{'active': vm.stateName == 'search'}"  ui-sref="search">Search</a></li>
