--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -49,7 +49,7 @@
         <tr>
             <th width="500">Project title</th>
             <th>Project status</th>
-            <th>Active in country</th>
+            <th>Country</th>
             <th width="200">Total budget</th>
         </tr>
     </thead>
