--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -131,11 +131,15 @@
                             </tr>
                             <tr>
                                 <td>Funding partners:</td>
-                                <td><span ng-if="org.role.code == 1" ng-repeat='org in vm.activity.participating_organisations'>{{org.narratives[0].text}}{{$last ? '' : ', '}}</span></td>
+                                <td><span ng-if="org.role.code == 1" ng-repeat='org in vm.activity.participating_organisations'>
+                                    {{org.narratives[0].text}}{{$last ? '' : ', '}}
+                                </span></td>
                             </tr>
                             <tr>
-                                <td>Project partners:</td>
-                                <td><span ng-if="org.role.code == 4" ng-repeat='org in vm.activity.participating_organisations'>{{org.narratives[0].text}}{{$last ? '' : ', '}}</span></td>
+                                <td>Implementing partners:</td>
+                                <td><span ng-if="org.role.code == 4" ng-repeat='org in vm.activity.participating_organisations'>
+                                    {{org.narratives[0].text}}{{$last ? '' : ', '}}
+                                </span></td>
                             </tr>
                             <tr>
                                 <td>Status:</td>
@@ -143,7 +147,12 @@
                             </tr>
                             <tr>
                                 <td>(Un)tied:</td>
-                                <td><span ng-if='vm.activity.default_tied_status.name.length'>{{vm.activity.default_tied_status.name}}</span><span ng-if='!vm.activity.default_tied_status.name.length'>No data available yet</span></td>
+                                <td><span ng-if='vm.activity.default_tied_status.name.length'>
+                                    {{vm.activity.default_tied_status.name}}
+                                </span>
+                                <span ng-if='!vm.activity.default_tied_status.name.length'>
+                                    No data available yet
+                                </span></td>
                             </tr>
                             <tr>
                                 <td>Policy:</td>
@@ -162,10 +171,10 @@
                         </div>
                         <h4>Related documents</h4>
                         <hr>
-                            <p ng-show="vm.activity.documents.length == 0">
+                            <p ng-show="vm.activity.document_links.length == 0">
                                 No documents available.
                             </p>
-                            <p ng-repeat="document in vm.activity.documents">
+                            <p ng-repeat="document in vm.activity.document_links">
                                 <a target="_blank" href="{{document.url}}">
                                     <i class="glyphicon glyphicon-download-alt"></i>{{document.title}}
                                 </a>
