--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="featured-image">
-                        <img src="{{vm.templateBaseUrl}}/images/Develop2Build header.jpg">
+                        <img ng-src="{{vm.templateBaseUrl}}/images/countries/{{vm.country_id}}-745x300.jpg">
                     </div>
                     <div class="white no-margin-bottom no-padding-bottom">
                         <h2>Related project map</h2>
