programmes + 2 counts working

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -53,7 +53,7 @@
 <div class="row">
     <div class="col-sm-12 map">
         <div class="geomap-mask">  
-            <countries-geo-map map-height='450px' map-legend='false'></countries-geo-map>
+            <countries-geo-map map-height='450px'></countries-geo-map>
         </div>
     </div>
 </div>
