--- a/templates/activities/activities-view-list-map.html
+++ b/templates/activities/activities-view-list-map.html
@@ -2,7 +2,7 @@
 
     <filter-bar views="[{'id':'activities', 'name': 'Map & list'}, {'id':'activities-list', 'name': 'List'}]" current-page="activities"></filter-bar>
 
-    <locations-geo-map map-height='400px'></locations-geo-map>
+    <countries-geo-map map-height='400px'></countries-geo-map>
 
     <activity-list></activity-list>
 
