--- a/templates/programmes/programmes-view-list.html
+++ b/templates/programmes/programmes-view-list.html
@@ -2,7 +2,7 @@
 
     <filter-bar views="[{'id':'activities-list', 'name': 'Bekijk lijst'}, {'id':'activities', 'name': 'Bekijk op kaart & lijst'}]" current-page="activities"></filter-bar>
 
-    <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
+    <countries-geo-map map-height='350px'></countries-geo-map>
     
     <programme-list></programme-list>
 
