--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -32,6 +32,9 @@
 					</tbody>
 				</table>
 			</div>
+			<div class="col-md-12 text-center">
+				<button class="btn btn-default btn-save btn-openaid" ng-click="vm.save()">Save</button>
+			</div>
 		</div>
 	</div>
 </div>
