--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -29,7 +29,7 @@
                         <h2>Related project map</h2>
                     </div>
                     <div class="map">
-                        <activity-geomap map-height="350px" activity="vm.activity"></activity-geomap>
+                        <countries-geo-map map-height='450px' map-legend='false'></countries-geo-map>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -38,10 +38,10 @@
                         <hr>
                         <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
                     </div>
-                    <div class="panel lightblue">
+                    <div class="panel lightblue" ng-show="vm.programmeUrl">
                         <h3>More information</h3>
                         <hr>
-                        <p><a href="#" target="_blank">Visit the programme page on rvo.nl</a></p>
+                        <p><a ng-href="{{vm.programmeUrl}}" target="_blank">Visit the programme page on rvo.nl</a></p>
                     </div>
                     <div class="panel lightblue">
                         <h3>Programme updates</h3>
@@ -53,6 +53,8 @@
                         <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
                         </div> -->
+                    </div>
+                    <div class="panel lightblue">
                         <h4>Related documents</h4>
                         <hr>
                             <p ng-show="vm.activity.documents.length == 0">
@@ -99,7 +101,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <activity-list 
-                        has-to-contain="programmes__in"  
+                        has-to-contain="related_activity_id"  
                         count="vm.tabs[1].count"
                         shown="vm.selectedTab == 'activities'"></activity-list>
                 </div>
@@ -113,7 +115,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <country-list 
-                        has-to-contain="programmes__in" 
+                        has-to-contain="related_activity_id" 
                         count="vm.tabs[2].count"
                         shown="vm.selectedTab == 'countries'"></country-list>
                 </div>
@@ -127,7 +129,7 @@
                 <div class="col-md-12">
 
                     <sector-list 
-                        has-to-contain="programmes__in" 
+                        has-to-contain="related_activity_id" 
                         count="vm.tabs[3].count"
                         shown="vm.selectedTab == 'sectors'"></sector-list>
                 </div>
@@ -141,7 +143,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <implementing-organisations-list 
-                        has-to-contain="programmes__in" 
+                        has-to-contain="related_activity_id" 
                         count="vm.tabs[4].count"
                         shown="vm.selectedTab == 'implementing-organisations'"></implementing-organisations-list>
                 </div>
