--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -132,6 +132,21 @@
         </div>
     </div>
 
+    <div ng-show="vm.selectedTab == 'programmes'">
+        <div class="container extra detailview">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <programme-list 
+                        has-to-contain="participating_organisations__organisation__code__in" 
+                        count="vm.tabs[2].count"
+                        shown="vm.selectedTab == 'programmes'"></programme-list>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div ng-show="vm.selectedTab == 'sectors'">
         <div class="container detailview extra">
 
@@ -139,7 +154,7 @@
                 <div class="col-md-12">
                     <sector-list 
                         has-to-contain='participating_organisations__organisation__code__in' 
-                        count='vm.tabs[2].count'
+                        count='vm.tabs[3].count'
                         shown="vm.selectedTab == 'sectors'"></sector-list>
                 </div>
             </div>
@@ -153,7 +168,7 @@
                 <div class="col-md-12">
                     <country-list 
                         has-to-contain='participating_organisations__organisation__code__in' 
-                        count='vm.tabs[3].count'
+                        count='vm.tabs[4].count'
                         shown="vm.selectedTab == 'countries'"></country-list>
                 </div>
             </div>
