--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -17,11 +17,8 @@
     
             <div class="row">
                 <div class="col-md-8">
-                    <div class="featured-image">
-                        <img src="{{vm.templateBaseUrl}}/images/Develop2Build header.jpg">
-                    </div>
                     <div class="white">
-                        <h2>Description</h2>
+                        <h2 class="no-margin-top">Description</h2>
                         <p>{{vm.activity.description[0].narratives[0].text}}</p>              
                     </div>
                     <div class="white no-margin-bottom no-padding-bottom">
