--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -54,7 +54,7 @@
     </div>
 </div>
 
-<div class="row cirkle-vis">
+<div class="row cirkle-vis" ng-hide="vm.currentPage === 'search'">
     <div class="col-xs-12">
         <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
