--- a/templates/search/search-page.html
+++ b/templates/search/search-page.html
@@ -28,34 +28,34 @@
         search-value="vm.searchValue"></activity-list>
 </div>
 
-<div ng-show="vm.selectedTab == 'organisations'">
-    <implementing-organisations-list
-        has-to-contain="name_query" 
+<div ng-show="vm.selectedTab == 'programmes'">
+    <programme-list 
+        has-to-contain="query" 
         count="vm.tabs[1].count"
-        shown="vm.selectedTab == 'organisations'"
-        search-value="vm.searchValue"></implementing-organisations-list>
-</div>
-
-<div ng-show="vm.selectedTab == 'sectors'">
-    <sector-list 
-        has-to-contain="name_query" 
-        count="vm.tabs[2].count"
-        shown="vm.selectedTab == 'sectors'"
-        search-value="vm.searchValue"></sector-list>
+        shown="vm.selectedTab == 'programmes'"
+        search-value="vm.searchValue"></programme-list>
 </div>
 
 <div ng-show="vm.selectedTab == 'countries'">
     <country-list
         has-to-contain="name_query" 
-        count="vm.tabs[3].count"
+        count="vm.tabs[2].count"
         shown="vm.selectedTab == 'countries'"
         search-value="vm.searchValue"></country-list>
 </div>
 
-<div ng-show="vm.selectedTab == 'regions'">
-    <region-list
+<div ng-show="vm.selectedTab == 'sectors'">
+    <sector-list 
+        has-to-contain="name_query" 
+        count="vm.tabs[3].count"
+        shown="vm.selectedTab == 'sectors'"
+        search-value="vm.searchValue"></sector-list>
+</div>
+
+<div ng-show="vm.selectedTab == 'organisations'">
+    <implementing-organisations-list
         has-to-contain="name_query" 
         count="vm.tabs[4].count"
-        shown="vm.selectedTab == 'regions'"
-        search-value="vm.searchValue"></region-list>
+        shown="vm.selectedTab == 'organisations'"
+        search-value="vm.searchValue"></implementing-organisations-list>
 </div>
