--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -26,19 +26,19 @@
     <div class="col-sm-3">
       <div class="panel">
         <h3><a ui-sref="activities" class="icon lightbulb">Projects</span></a></h3>  
-        <p>Get detailed overview of projects.</p>  
+        <p>Get a detailed overview of projects.</p>  
       </div>
     </div>
     <div class="col-sm-3">
       <div class="panel">
         <h3><a ui-sref="programmes" class="icon handshake">Programmes</span></a></h3>  
-        <p>See which programmes we participate in.</p> 
+        <p>Get a detailed overview of programmes.</p> 
       </div>
     </div>
     <div class="col-sm-3">
       <div class="panel">
         <h3><a ui-sref="locations-map" class="icon globe">Countries</span></a></h3>  
-        <p>Get detailed overview of projects </p> 
+        <p>See which countries we work in.</p> 
       </div>
     </div>
     <div class="col-sm-3">
@@ -53,7 +53,7 @@
 <div class="row">
     <div class="col-sm-12 map">
         <div class="geomap-mask">  
-            <countries-geo-map map-height='450px'></countries-geo-map>
+            <countries-geo-map map-height='400px'></countries-geo-map>
         </div>
     </div>
 </div>
