--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-sm-3 chart">
                     <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund"></oipa-pie-chart>
-                    <h4>Budget distibution</h4>
+                    <h4>Budget distribution</h4>
                 </div>
             </div>
         </div>
