--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -42,18 +42,18 @@
                             <tbody>
                                 <tr>
                                     <td width="200">
-                                        Total county expenditure
+                                        Total country budget
                                     </td>
                                     <td>
-                                        {{vm.disbursements | shortcurrency :'€'}}
+                                        {{vm.budget | shortcurrency :'€'}}
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        Total county budget
+                                        Total country expenditure
                                     </td>
                                     <td>
-                                        {{vm.budget | shortcurrency :'€'}}
+                                        {{vm.disbursements | shortcurrency :'€'}}
                                     </td>
                                 </tr>
                                 <tr>
