--- a/templates/locations/locations-view-map-list.html
+++ b/templates/locations/locations-view-map-list.html
@@ -5,8 +5,9 @@
             <filter-bar 
                 views="[{'id':'locations-map', 'name': 'Map & list'}]"
                 current-page="countries"></filter-bar>
-
-            <locations-geo-map geo-view="vm.geoView" map-height="400px" map-legend='true' map-dropdown='false'></locations-geo-map>
+                
+            <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
+            <!-- <locations-geo-map geo-view="vm.geoView" map-height="400px" map-legend='true' map-dropdown='false'></locations-geo-map> -->
 
             <country-list></country-list>
             
