--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -111,10 +111,6 @@
                             </tr>
                             <tr>
                                 <td>Budget spent:</td>
-                                <td><span ng-if='vm.activity.total_budget.length'>{{vm.activity.total_budget | shortcurrency :'€'}}</span><span ng-if='!vm.activity.total_budget.length'>No data available yet</span></td>
-                            </tr>
-                            <tr>
-                                <td>Budget depletion:</td>
                                 <td>
                                     <div class="progress small">
                                       <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%;">
@@ -150,7 +146,7 @@
                                 </span></td>
                             </tr>
                             <tr>
-                                <td>Policy:</td>
+                                <td>Policy marker:</td>
                                 <td>No data available yet</td>
                             </tr>
                         </table>
@@ -158,9 +154,6 @@
                     <div class="panel lightblue">
                         <h3>Project updates</h3>
                         <hr>
-                        <div class="video">
-                            <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
-                        </div>
                         <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -193,11 +186,6 @@
                                 </td>
                             </tr>
                         </table>
-                    </div>
-                    <div class="panel lightblue">
-                        <h3>Embed code</h3>
-                        <hr>
-                        <p>Copy and paste the following code on your site</p>
                     </div>
                 </div>
             </div>
@@ -414,9 +402,20 @@
                             </tr>
                         </tbody>
                     </table>
+                     <table class="no-format">
+                        <tr>
+                            <td width="200">Budget spent:</td>
+                            <td>
+                                <div class="progress small">
+                                  <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%;">
+                                    77% spent
+                                    <div class="gradient"></div>
+                                  </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
 
-
-                    <nvd3 options="vm.transactionChartOptions" data="vm.transactionChartData" class="with-3d-shadow with-transitions"></nvd3>
                 </div>
 
                 <div class="panel lightblue with-table">
