--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-sm-3 chart">
                     <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund"></oipa-pie-chart>
-                    <h4>Budget distibution</h4>
+                    <h4>Budget distribution</h4>
                 </div>
             </div>
         </div>
