--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -75,7 +75,7 @@
 <div class="container">
   <div class="row visualize">
       <div class="col-sm-4 text-center">
-        <oipa-pie-chart group-by="activity_status" aggregation-key="incoming_fund"></oipa-pie-chart>
+        <oipa-pie-chart group-by="related_activity" aggregation-key="incoming_fund"></oipa-pie-chart>
         <h4>Budget per programme</h4>
       </div>
       <div class="col-sm-4 text-center">
