--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -154,9 +154,10 @@
                     <div class="panel lightblue">
                         <h3>Project updates</h3>
                         <hr>
-                        <div class="video">
+                            No updates available.
+                        <!-- <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
-                        </div>
+                        </div> -->
                         <h4>Related documents</h4>
                         <hr>
                             <p ng-show="vm.activity.document_links.length == 0">
