--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,12 +1,29 @@
 <div id="main-content" class="about-page container">
 	<div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-		    <h1>About RVO open data</h1>
-			<p><strong>Netherlands Enterprise Agency (RVO.nl) encourages entrepreneurs in sustainable, agrarian, innovative and international business. It helps with grants, finding business partners, know-how and compliance with laws and regulations.</strong></p>		
-			<p>The aim is to improve opportunities for entrepreneurs and strengthen their position. The Agency works at the instigation of ministries and the European Union.</p>
-			<p>Netherlands Enterprise Agency is part of the Ministry of Economic Affairs. The organisation has been in existence since 2014 and is the result of a merger between NL Agency and the Dienst Regelingen. Some activities of the Commodities Boards are also included. </p>
-			<p>Netherlands Enterprise Agency focuses on providing services to entrepreneurs. It aims to make it easier to do business using smart organisation and digital communication. The Agency works in The Netherlands and abroad with governments, knowledge centres, international organisations and countless other partners.</p>
-			
+		    <h2>What data can be found at this portal of the Netherlands Enterprise Agency (RVO.nl)?</h2>
+			<p>At this portal is visualized the open data on official development aid projects and programmes executed  by the Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland  - <a href="http://www.rvo.nl">RVO.nl</a>). Programmes commissioned and funded by the Dutch Ministry of Foreign Affairs. On projects under implementation at or started after January 2015.
+			The data is published in the international International Aid Transparancy Initiative (IATI) standard which is easy for computers to read, but very hard for humans. The information is made accessible through a web interface. It does not alter or interpret the data in any way.</p>
+			<p>Non-IATI data on projects - as monitoring reports, photos and videos - is added regularly.</p>
+			<p>The Netherlands Enterprise Agency publishes and updates its projects on at least quarterly basis. Based on the principle that all project information should be published unless there is a clear reason for not doing so. Only confidentiality of data or safety for staff executing a project can be a reason for not publishing data. This can be on individual bits of information or the entire project.</p>
+			<h2>Why is open data important?</h2>
+			<p>Transparency of development aid enhances the effectiveness and quality of development aid. Politicians, civil society, the media and the (Dutch) public gets a better picture of how public money is spent.</p>
+			<p>Analyzing and visualizing of RVO.nl data and then and combining it with the data of other governmental bodies and NGO’s makes it relatively easy to see which projects are being carried out for a particular country, region, sector or theme. It also makes it possible to see when, where and by whom projects are being carried out and how much money is being spent.</p>
+			<p>Additionally, open data can be used as a communication tool, monitoring & evaluation tool, information and knowledge management system and create track records.
+			Finally, visualisation of data will also alter the way RVO.nl reports to the Ministry of Foreign Affairs on goals and results of programmes and projects.</p>
+			<h2>Data quality</h2>
+			<p>Data quality is one of the mayor challenges. Traditionally the data comes from fragmented information held in internal systems, used for reporting to the Ministry of Foreign Affairs. So without open publication in mind.</p>
+			<p>We believe that open data is not about the publication of perfect data; it’s about perfecting that data and the projects that it pertains to. As the culture of open data and transparency becomes embedded into the organization, the quality and application of data will continue to improve.</p>
+			<p>The financial data in this portal does not automatically synchronize completely with the finance & control accounting system of RVO.nl. This system is always leading and more accurate.</p>
+			<p>Despite all efforts, it is very well possible then that mistakes or imperfections are noticed in our data files. If so, don’t hesitate to let us know via <a href="mailto:iati@rvo.nl">iati@rvo.nl</a>.</p>
+			<h2>Credits</h2>
+			<p>Aiddata.rvo.nl is designed & developed by <a href="http://www.zimmermanzimmerman.nl" target="_blank">Zimmerman & Zimmerman</a>. Zimmerman & Zimmerman is a dutch open-data visualisation company based in Amsterdam that develops open source IATI tools, such as transparency portals for open UNESCO, open UN-Habitat, openaidNL and the Urban data portal for UN-Habitat. All these tools run on an Open IATI Parser and API called OIPA, which was developed by Zimmerman & Zimmerman.</p>
+			<p>Aiddata.rvo.nl by Zimmerman & Zimmerman is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
+			<p>Based on a work at <a href="https://github.com/zimmerman-zimmerman/rvo" target="_blank">https://github.com/zimmerman-zimmerman/rvo</a>
+			<h2>Disclaimer</h2>
+			<p>This portal is managed by the Netherlands Enterprise Agency, an agency of the Dutch government concerned with international business and cooperation. Whilst a great deal of care has been taken in compiling the contents of this portal, the Agency can not be held liable for any damages resulting from any inaccuracies and/or outdated information.
+			Copying or reproducing information from this site is permitted solely when accompanied with an acknowledgement of the source and the preservation of any references to the Netherlands Enterprise Agency.</p>
+			<p>This portal may include relevant links to external websites. The Netherlands Enterprise Agency cannot be held responsible for the contents of websites of external parties.</p>
 		</div>
 	</div>
 </div>
