view switcher sector vis

--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -9,19 +9,13 @@
         submit-search="vm.submitSearch"></top-navbar>
     -->
 
-    <div class="row switch-view">
-    	<div class="col-xs-6">
-    		<div class="panel current lightblue no-margin-bottom">
-    			<i class="icon globe"></i> Map & list view
-    		</div>
-    	</div>
-    	<div class="col-xs-6">
-    		<div class="panel xlightblue no-margin-bottom" ui-sref="sectors-vis">
-    			<i class="icon presentation"></i> Visualisation
-    		</div>
-    	</div>
-    	<div class="col-xs-12 border">
-    	</div>
+    <div class="switch-view">
+		<div class="panel current lightblue no-margin-bottom">
+			<i class="icon globe"></i> Map & list view
+		</div>
+		<div class="panel xlightblue no-margin-bottom" ui-sref="sectors-vis">
+			<i class="icon presentation"></i> Visualisation
+		</div>
     </div>
 
     <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
