--- a/templates/sectors/sectors-view-visualisation.html
+++ b/templates/sectors/sectors-view-visualisation.html
@@ -8,16 +8,12 @@
         search-value="vm.searchValue"
         submit-search="vm.submitSearch"></top-navbar> -->
 
-    <div class="row switch-view">
-        <div class="col-xs-6">
-            <div class="panel xlightblue no-margin-bottom" ui-sref="sectors">
-                <i class="icon globe"></i> Map & list view
-            </div>
+    <div class="switch-view">
+        <div class="panel xlightblue no-margin-bottom" ui-sref="sectors">
+            <i class="icon globe"></i> Map & list view
         </div>
-        <div class="col-xs-6">
-            <div class="panel current lightblue no-margin-bottom">
-                <i class="icon presentation"></i> Visualisation
-            </div>
+        <div class="panel current lightblue no-margin-bottom">
+            <i class="icon presentation"></i> Visualisation
         </div>
     </div>
 
