fix share buttons

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -5,8 +5,8 @@
   </div>
   <div class="col-md-4">
     <div class="panel transparent">
-      <h1>Open data of the Netherlands Enterprise Agency</h1>
-      <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs. Data reported to the IATI registry.</p>
+      <h1>Data reported to the IATI registry since January 2015</h1>
+      <p>Find open data on development aid projects and programs executed by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs.</p>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-4">
