--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -154,7 +154,7 @@
                     <div class="panel lightblue">
                         <h3>Project updates</h3>
                         <hr>
-                            No updates available.
+                        <p>No updates available.</p>
                         <!-- <div class="video">
                             <iframe width="581" height="215" src="https://www.youtube.com/embed/Ygng2822jMQ" frameborder="0" allowfullscreen></iframe>
                         </div> -->
@@ -183,7 +183,7 @@
                                     <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="fa fa-twitter-square"></i></a>
                                     <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="fa fa-facebook-square"></i></a>
                                     <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="fa fa-linkedin-square"></i></a>
-                                    <a href=""><i class="fa fa-envelope-square"></i></a>
+                                    <a href="mailto:?&subject={{vm.shareDescription}}&body={{vm.pageUrl}}"><i class="fa fa-envelope-square"></i></a>
                                 </td>
                             </tr>
                         </table>
