prep voor budget progress bar dynamisch maken

--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -107,14 +107,15 @@
                             </tr>
                             <tr>
                                 <td>Total budget: </td>
-                                <td>{{vm.activity.activity_status.name}}</td>
+                                <td><span ng-if='vm.activity.total_budget.length'>{{vm.activity.total_budget | shortcurrency :'€'}}</span>
+                                <span ng-if='!vm.activity.total_budget.length'>No data available yet</span></td>
                             </tr>
                             <tr>
                                 <td>Budget spent:</td>
                                 <td>
                                     <div class="progress small">
-                                      <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%;">
-                                        77% spent
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="vm.budgetLeft" aria-valuemin="0" aria-valuemax="100" ng-style="vm.progressStyle">
+                                            {{vm.budgetLeft}}% spent
                                         <div class="gradient"></div>
                                       </div>
                                     </div>
@@ -408,8 +409,8 @@
                             <td width="200">Budget spent:</td>
                             <td>
                                 <div class="progress small">
-                                  <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%;">
-                                    77% spent
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="vm.budgetLeft" aria-valuemin="0" aria-valuemax="100" ng-style="vm.progressStyle">
+                                     {{vm.budgetLeft}}% spent
                                     <div class="gradient"></div>
                                   </div>
                                 </div>
