--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,6 +1,6 @@
 <div id="main-content" class="about-page container">
 	<div class="row">
-        <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 		    <h2>What data can be found at this portal of the Netherlands Enterprise Agency (RVO.nl)?</h2>
 			<p>At this portal is visualized the open data on official development aid projects and programmes executed  by the Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland  - <a href="http://www.rvo.nl">RVO.nl</a>). Programmes commissioned and funded by the Dutch Ministry of Foreign Affairs. On projects under implementation at or started after January 2015.
 			The data is published in the international International Aid Transparancy Initiative (IATI) standard which is easy for computers to read, but very hard for humans. The information is made accessible through a web interface. It does not alter or interpret the data in any way.</p>
